--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-router-dom": "^5.1.6",
     "axios": "^0.20.0",
     "dotenv": "^8.2.0",
+    "formik": "^2.2.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.1",
