--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "axios": "^0.20.0",
     "dotenv": "^8.2.0",
     "formik": "^2.2.1",
+    "install": "^0.13.0",
+    "npm": "^6.14.8",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-markdown": "^5.0.2",
     "react-pdf": "^5.0.0",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
