--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "candi-website",
   "version": "0.1.0",
   "private": true,
+  "peerDependencies": {
+    "react": "^0.14.0 || >=15.0.0",
+    "react-dom": "^0.14.0 || >=15.0.0",
+    "sortablejs": "^1.6.1"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -22,8 +27,8 @@
     "formik": "^2.2.1",
     "install": "^0.13.0",
     "npm": "^6.14.8",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-hook-form": "^6.11.0",
     "react-markdown": "^5.0.2",
     "react-pdf": "^5.0.0",
@@ -31,9 +36,11 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
+    "react-sortablejs": "^6.0.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "sortablejs": "^1.6.1",
     "typescript": "^3.7.5"
   },
   "scripts": {
