--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "candi-website",
   "version": "0.1.0",
   "private": true,
+  "peerDependencies": {
+    "react": "^0.14.0 || >=15.0.0",
+    "react-dom": "^0.14.0 || >=15.0.0",
+    "sortablejs": "^1.6.1"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -12,22 +18,34 @@
     "@types/node": "^12.12.69",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-pdf": "^5.0.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
-    "axios": "^0.20.0",
+    "ant-design-pro": "^2.3.2",
+    "antd": "^4.10.0",
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "formik": "^2.2.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "formik-antd": "^2.0.1",
+    "install": "^0.13.0",
+    "npm": "^6.14.8",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-hook-form": "^6.11.0",
+    "react-markdown": "^5.0.2",
+    "react-pdf": "^5.0.0",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
+    "react-sortablejs": "^6.0.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "typescript": "^3.7.5"
+    "sortablejs": "^1.6.1",
+    "typescript": "^3.7.5",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
