--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "formik": "^2.2.1",
     "formik-antd": "^2.0.1",
     "install": "^0.13.0",
+    "jwt-decode": "^3.1.2",
     "npm": "^6.14.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
