--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-REACT_APP_SERVER_URL = http://id.thetobbers-develop.ml
+REACT_APP_SERVER_URL = http://id.thetobbers-staging.ml
+REACT_APP_BASE_URL = thetobbers-staging.ml
+REACT_APP_FRONTEND_BASE_DOMAIN = candi.local:3000
