updated env files

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 REACT_APP_SERVER_URL = http://id.thetobbers-staging.ml
 REACT_APP_BASE_URL = thetobbers-staging.ml
 REACT_APP_FRONTEND_BASE_DOMAIN = candi.local:3000
+REACT_APP_FRONTEND_HOME_URL = id.candi.local:3000
